--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ baseurl: ""
 
 markdown: kramdown
 highlighter: rouge
+permalink: "/:year-:month-:day"
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
